--- a/style.css
+++ b/style.css
@@ -756,7 +756,17 @@ i {
 }
 .story--scroll {
   background-color: transparent;
- display: block;
+  color: #999;
+  padding: 5px 8px;
+  border: 0;
+  font-size: 1rem;
+  border-radius: 50%;
+  cursor: poiner;
+  box-shadow: 0 0 10px #999;
+  z-index: 1;
+  cursor: pointer;
+  margin: 0px 5px;
+  transition: 0.7s;
 }
 }
 
